# legacyhelper

./: .coverage  .gitignore  CHANGELOG.md  CLAUDE.md  MULTI_MODEL_GUIDE.md  QUICKSTART.md  README.md  demo_parser.py  list_models.py  main.py  pyproject.toml  run_all_tests.sh  system_prompt.py  test.txt  test_legacyhelper_comprehensive.py  test_tui.py
legacyhelper/core/: agent.py  command_parser.py  executor.py  history_reader.py  workflow.py
legacyhelper/model/: __init__.py  base.py  claude.py  factory.py  gemini.py  openai.py
legacyhelper/tools/: command_tool.py
legacyhelper/ui/: __init__.py  app.py  widgets.py
test/: README.md  TESTING.md  conftest.py  test_agent.py  test_agent_pydantic_ai.py  test_backend_processing.py  test_bash_tool.py  test_command_parser.py  test_conversation.py  test_executor.py  test_model_factory.py  test_model_factory_new.py  test_system_logs.py  test_tui_app.py  test_workflow.py
