[project]
name = "legacyhelper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.72.0",
    "google-generativeai>=0.8.5",
    "ipython>=9.6.0",
    "openai>=2.6.1",
    "pydantic-ai",
    "pylint>=4.0.2",
    "pytest>=8.4.2",
    "rich",
    "textual>=6.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pylint",
]

[tool.setuptools.packages.find]
where = ["src"]
