[project]
name = "legacyhelper"
version = "0.1.0"
description = "Life savior for novice UNIX users."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.72.0",
    "google-generativeai>=0.8.5",
    "ipython>=9.6.0",
    "openai>=2.6.1",
    "pydantic-ai",
    "pylint>=4.0.2",
    "pyperclip>=1.8.0",
    "pytest>=8.4.2",
    "rich",
    "textual>=6.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pylint",
]

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "dirty-equals>=0.11",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
    "ignore::DeprecationWarning:griffe.*",
    "ignore::pydantic.PydanticDeprecatedSince212:google.genai.*",
]
